# django-channels-practice

./: README.md  manage.py  pyproject.toml
PracticeDjangoChannels/: settings.py  urls.py  wsgi.py
