[tool.poetry]
name = "practicedjangochannels"
version = "0.1.0"
description = ""
authors = ["lambdacore <jonathanwh93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
